--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <header>
     <div fxLayout="row" fxLayoutGap="5em">
-      <a routerLink="login">login</a>
-      <a routerLink="signup">signup</a>
-      <a [routerLink]="['user', 1]" routerLinkActive="router-link-active"
+      <a [routerLink]="['users/login']">login</a>
+      <a [routerLink]="['users/signup']">signup</a>
+      <a [routerLink]="['users', 1]" routerLinkActive="router-link-active"
         >profile</a
       >
     </div>
