--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start center">
   <span fxFlex="15"></span>
 
-  <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z15">
-    <mat-card-header class="card-header">
-      <mat-card-title>Sign in</mat-card-title>
+  <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
+    <mat-card-header fxLayout="column" fxLayoutAlign="start center">
+      <mat-card-title>Sign In</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
@@ -13,7 +13,7 @@
         [formGroup]="loginForm"
         fxLayout="column"
       >
-        <mat-form-field class="mat-form-field">
+        <mat-form-field>
           <mat-label>Email</mat-label>
           <input
             matInput
@@ -51,9 +51,13 @@
           }}</mat-error>
         </mat-form-field>
 
-        <a href="#" class="reset-password" fxFlexAlign="end"
-          >Forgot password?</a
-        >
+        <mat-card-subtitle fxFlexAlign="end">
+          <a
+            [routerLink]="['/users/account-recovery']"
+            class="forgot-password"
+            >Forgot password?</a
+          >
+        </mat-card-subtitle>
 
         <mat-error
           fxFlexAlign="center"
@@ -62,13 +66,7 @@
         >
         <div class="btn-group" fxLayout="column" fxLayoutGap=".5em">
           <button type="submit" mat-flat-button color="primary">Login</button>
-          <button
-            mat-button
-            [routerLink]="['/signup']"
-            routerLinkActive="router-link-active"
-          >
-            Sign up
-          </button>
+          <button mat-flat-button [routerLink]="['/users/signup']" color="accent">Sign up</button>
         </div>
       </form>
     </mat-card-content>
