--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,13 +33,14 @@ $EventHub-dark-theme: mat.define-dark-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-// *{
-//   box-sizing: border-box;
-// }
+*{
+  box-sizing: border-box;
+}
 
 html,
 body {
   height: 100%;
+
 }
 
 body {
