fix issue with card layout  -replace <mat-card-header> with <mat-card-subtitle>   - remove button container

--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -1,10 +1,8 @@
-<div class="container" fxLayout="column" fxLayoutAlign="start center">
+<div class="container" fxLayout="column" fxLayoutAlign="start stretch">
   <span fxFlex="15"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
-    <mat-card-header fxLayout="column" fxLayoutAlign="start center">
-      <mat-card-title> Recover Your password </mat-card-title>
-    </mat-card-header>
+    <mat-card-subtitle>Enter your email and we'll send you a link to get back into your account.</mat-card-subtitle>
     <mat-card-content>
       <form
         (ngSubmit)="onSubmit()"
@@ -16,11 +14,9 @@
           <input matInput type="email" formControlName="email" autofocus />
         </mat-form-field>
 
-        <div class="btn-group" fxLayout="column" fxLayoutGap=".5em">
           <button type="submit" mat-flat-button color="primary">
             Send Recovery Email
           </button>
-        </div>
       </form>
     </mat-card-content>
   </mat-card>
