--- a/src/app/user/forgot-password/forgot-password.component.scss
+++ b/src/app/user/forgot-password/forgot-password.component.scss
@@ -1,3 +1,5 @@
+
+
 .container {
   width: 100%;
   height: 100%;
@@ -6,28 +8,28 @@
 .card {
   width: 450px;
   height: fit-content;
-
+  margin: 0 auto;
 }
 
-mat-card-header {
-  margin-bottom: 1em;
-}
+// mat-card-header {
+//   margin-bottom: 1em;
+// }
 
 
 mat-card {
+  min-width: 300px;
   padding: 2.5rem;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  margin: 0 2rem;
 }
 
 
-.btn-group {
-  margin-top: 2rem;
-}
 
-.btn-group>button {
-  margin: 0 2.5rem;
+button {
+  margin: 0 2.5em;
+  padding: 0 .5em;
 }
