--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -13,32 +13,31 @@ a{
 .container{
   width: 100%;
   height: 100%;
+
 }
 
 .card {
   width: 450px;
   height: fit-content;
+  margin: 0 auto;
 
 }
 
 mat-card {
+  min-width: 300px;
   padding: 2.5rem;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  margin: 0 2rem;
 }
 
 mat-card-header {
   margin-bottom: 1em;
 }
 
-mat-card-header{
-  mat-card-title{
-    margin: 0 4.8rem;
-  }
-}
 
 .forgot-password {
   display: block;
