enhance form title and error text style

--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -2,7 +2,13 @@
   <span fxFlex="15"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
-    <mat-card-subtitle>Enter your email and we'll send you a link to get back into your account.</mat-card-subtitle>
+    <mat-error *ngIf="errorMessage$ | async as errorMessage">{{
+      errorMessage
+    }}</mat-error>
+
+    <p>
+      Enter your email and we'll send you a link to get back into your account.
+    </p>
     <mat-card-content>
       <form
         (ngSubmit)="onSubmit()"
@@ -14,9 +20,9 @@
           <input matInput type="email" formControlName="email" autofocus />
         </mat-form-field>
 
-          <button type="submit" mat-flat-button color="primary">
-            Send Recovery Email
-          </button>
+        <button type="submit" mat-flat-button color="primary">
+          Send Recovery Email
+        </button>
       </form>
     </mat-card-content>
   </mat-card>
