--- a/src/app/user/forgot-password/forgot-password.component.scss
+++ b/src/app/user/forgot-password/forgot-password.component.scss
@@ -1,4 +1,7 @@
-
+p{
+  font-weight: 500;
+  line-height: 1;
+}
 
 .container {
   width: 100%;
@@ -25,8 +28,17 @@ mat-card {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   margin: 0 2rem;
+  padding-top: 2em;
 }
 
+mat-error {
+  text-align: center;
+  margin-bottom: 1em;
+  font-weight: 500;
+  text-decoration: underline;
+  line-height: 1;
+
+}
 
 
 button {
