--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <span fxFlex="15"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
-    <mat-error *ngIf="errorMessage$ | async as errorMessage">{{
+    <mat-error class="error" *ngIf="errorMessage$ | async as errorMessage">{{
       errorMessage
     }}</mat-error>
 
@@ -20,7 +20,7 @@
           <input matInput type="email" formControlName="email" autofocus />
         </mat-form-field>
 
-        <button type="submit" mat-flat-button color="primary">
+        <button type="submit" mat-flat-button color="primary" [disabled]="forgotPasswordForm.invalid">
           Send Recovery Email
         </button>
       </form>
