--- a/src/app/user/forgot-password/forgot-password.component.scss
+++ b/src/app/user/forgot-password/forgot-password.component.scss
@@ -28,20 +28,21 @@ mat-card {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   margin: 0 2rem;
-  padding-top: 2em;
+  // padding-top: 2em;
 }
 
 mat-error {
   text-align: center;
   margin-bottom: 1em;
-  font-weight: 500;
   text-decoration: underline;
   line-height: 1;
 
 }
 
 
-button {
+.btn {
   margin: 0 2.5em;
   padding: 0 .5em;
+
 }
+
