--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -7,13 +7,8 @@
     </mat-card-header>
 
     <mat-card-content>
-      <form
-        action="POST"
-        (ngSubmit)="onSubmit()"
-        [formGroup]="loginForm"
-        fxLayout="column"
-      >
-        <mat-form-field>
+      <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" fxLayout="column">
+        <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
           <input
             matInput
@@ -22,12 +17,12 @@
             placeholder="Ex. me@example.com"
             autofocus
           />
-          <mat-error *ngIf="errorMessage$ | async as errorMessage">{{
-            errorMessage["email"]
+          <mat-error class="error" *ngIf="errorMessages">{{
+            errorMessages["email"]
           }}</mat-error>
         </mat-form-field>
 
-        <mat-form-field>
+        <mat-form-field appearance="fill">
           <mat-label>Enter your password</mat-label>
           <input
             matInput
@@ -46,27 +41,32 @@
               hidePassword ? "visibility_off" : "visibility"
             }}</mat-icon>
           </button>
-          <mat-error *ngIf="errorMessage$ | async as errorMessage">{{
-            errorMessage["password"]
+          <mat-error class="error" *ngIf="errorMessages">{{
+            errorMessages["password"]
           }}</mat-error>
         </mat-form-field>
 
         <mat-card-subtitle fxFlexAlign="end">
-          <a
-            [routerLink]="['/users/account-recovery']"
-            class="forgot-password"
+          <a [routerLink]="['/users/account-recovery']" class="forgot-password"
             >Forgot password?</a
           >
         </mat-card-subtitle>
 
-        <mat-error
-          fxFlexAlign="center"
-          *ngIf="errorMessage$ | async as errorMessage"
-          >{{ errorMessage["badRequest"] }}</mat-error
-        >
+        <mat-error class="error" fxFlexAlign="center" *ngIf="errorMessages">{{
+          errorMessages["badRequest"]
+        }}</mat-error>
         <div class="btn-group" fxLayout="column" fxLayoutGap=".5em">
-          <button type="submit" mat-flat-button color="primary">Login</button>
-          <button mat-flat-button [routerLink]="['/users/signup']" color="accent">Sign up</button>
+          <button type="submit" mat-flat-button color="primary" class="btn">
+            Login
+          </button>
+          <button
+            mat-flat-button
+            [routerLink]="['/users/signup']"
+            color="accent"
+            class="btn"
+          >
+            Sign up
+          </button>
         </div>
       </form>
     </mat-card-content>
