--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -2,25 +2,34 @@
   <span fxFlex="15"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
-    <mat-error class="error" *ngIf="errorMessage$ | async as errorMessage">{{
-      errorMessage
-    }}</mat-error>
-
-    <p>
-      Enter your email and we'll send you a link to get back into your account.
-    </p>
+    <mat-card-header>
+      <mat-card-title>Forgot Password</mat-card-title>
+      <mat-card-subtitle>
+        Enter your email and we'll send you a link to get back into your account.
+      </mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content>
       <form
         (ngSubmit)="onSubmit()"
         [formGroup]="forgotPasswordForm"
         fxLayout="column"
       >
-        <mat-form-field>
+        <mat-error
+          class="backend-error"
+          *ngIf="errorMessage$ | async as errorMessage"
+          >{{ errorMessage }}</mat-error
+        >
+        <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
           <input matInput type="email" formControlName="email" autofocus />
         </mat-form-field>
 
-        <button type="submit" mat-flat-button color="primary" [disabled]="forgotPasswordForm.invalid">
+        <button
+          type="submit"
+          mat-flat-button
+          color="primary"
+          [disabled]="forgotPasswordForm.invalid"
+        >
           Send Recovery Email
         </button>
       </form>
