--- a/src/app/user/forgot-password/forgot-password.component.scss
+++ b/src/app/user/forgot-password/forgot-password.component.scss
@@ -1,7 +1,3 @@
-p{
-  font-weight: 500;
-  line-height: 1;
-}
 
 .container {
   width: 100%;
@@ -14,9 +10,6 @@ p{
   margin: 0 auto;
 }
 
-// mat-card-header {
-//   margin-bottom: 1em;
-// }
 
 
 mat-card {
@@ -31,10 +24,18 @@ mat-card {
   // padding-top: 2em;
 }
 
+mat-card-header{
+  margin-bottom: 1rem;
+}
+mat-card-header {
+  mat-card-title{
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+}
+
 mat-error {
   text-align: center;
-  margin-bottom: 1em;
-  text-decoration: underline;
   line-height: 1;
 
 }
