--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -35,7 +35,13 @@ mat-card {
 }
 
 mat-card-header {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
+}
+mat-card-header {
+  mat-card-title{
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
 
 mat-form-field{
