add sign up component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div fxLayout="row" fxLayoutGap="5em">
       <a [routerLink]="['users/login']">login</a>
       <a [routerLink]="['users/signup']">signup</a>
+      <a [routerLink]="['users/reset-password']">resetPassword</a>
       <a [routerLink]="['users', 1]" routerLinkActive="router-link-active"
         >profile</a
       >
