--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start stretch">
-  <span fxFlex="15"></span>
+  <span fxFlex="10rem"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
     <mat-card-header>
