--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start stretch">
-  <span fxFlex="15"></span>
+  <span fxFlex="10rem"></span>
 
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
     <mat-card-header fxLayout="column" fxLayoutAlign="start center">
@@ -58,7 +58,7 @@
           >
         </mat-card-subtitle>
 
-        <div class="btn-group" fxLayout="column" fxLayoutGap=".5em">
+        <div class="btn-group" fxLayout="column" fxLayoutGap=".5rem">
           <button
             type="submit"
             mat-flat-button
