--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start stretch">
-  <span fxFlex="15"></span>
+  <span fxFlex="10rem"></span>
   <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
     <mat-card-header fxLayout="column" fxLayoutAlign="start center">
       <mat-card-title>Reset Password</mat-card-title>
