--- a/src/app/user/reset-password/reset-password.component.scss
+++ b/src/app/user/reset-password/reset-password.component.scss
@@ -4,7 +4,7 @@
 }
 
 .card{
-  width:440px;
+  width:450px;
   height: fit-content;
   margin: 0 auto;
 }
@@ -29,8 +29,7 @@ mat-form-field{
 }
 
 .btn {
-  margin: 0 2.5rem;
-  margin-top: 2rem;
+  margin-top: .5rem;
 }
 
 
