--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -1,1 +1,151 @@
-<p>signup works!</p>
+<div class="container" fxLayout="column" fxLayoutAlign="start stretch">
+  <span fxFlex="10rem"></span>
+
+  <div [ngClass]="{ 'first-card_show': hideCard }">
+    <mat-card
+      ngClass.gt-xs="card"
+      class="mat-elevation-z10"
+      fxFlexAlign="center"
+    >
+      <mat-card-header fxLayout="column" fxLayoutAlign="start center">
+        <mat-card-title>Sign Up</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="signUpForm" fxLayout="column">
+          <mat-form-field appearance="fill">
+            <mat-label>FirstName</mat-label>
+            <input matInput type="text" formControlName="firstName" autofocus />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">{{
+              error["firstName"]
+            }}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>LastName</mat-label>
+            <input matInput type="text" formControlName="lastName" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              {{ error["lastName"] }}
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>UserName</mat-label>
+            <input matInput type="text" formControlName="userName" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              {{ error["userName"] }}
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput type="email" formControlName="email" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              {{ error["email"] }}
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>password</mat-label>
+            <input matInput type="password" formControlName="password" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              <div>{{ error["password"] }}</div>
+            </mat-error>
+          </mat-form-field>
+          <button
+            [ngClass]="{ 'margin-top': ['password'] }"
+            type="button"
+            mat-flat-button
+            class="btn"
+            color="primary"
+            (click)="hideCard = !hideCard"
+          >
+            next
+          </button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div [ngClass]="{ 'second-card_show': !hideCard }">
+    <mat-card
+      ngClass.gt-xs="card"
+      class="mat-elevation-z10 second-card_hide"
+      fxFlexAlign="center"
+      [ngClass]="{ 'second-card_hide': hideCard }"
+    >
+      <mat-card-content>
+        <form
+          [formGroup]="signUpForm"
+          (ngSubmit)="onSubmit()"
+          fxLayout="column"
+        >
+          <mat-form-field appearance="fill">
+            <mat-label>Phone Number</mat-label>
+            <input
+              matInput
+              type="tel"
+              formControlName="phoneNumber"
+              autofocus
+            />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              {{ error["phoneNumber"] }}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Live In</mat-label>
+            <input matInput type="text" formControlName="liveIn" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">{{
+              error["liveIn"]
+            }}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Age</mat-label>
+            <input matInput type="text" formControlName="age" />
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">
+              {{ error["age"] }}
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Genre</mat-label>
+            <select matNativeControl formControlName="genre">
+              <option value="">-</option>
+              <option value="1">Male</option>
+              <option value="2">Female</option>
+            </select>
+            <mat-error class="error" *ngIf="errorMessage$ | async as error">{{
+              error["genre"]
+            }}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Join As</mat-label>
+            <select matNativeControl formControlName="roles">
+              <option value=" ">User</option>
+              <option value="producer">Artist</option>
+              <option value="organization">Organization</option>
+            </select>
+          </mat-form-field>
+          <button
+            mat-flat-button
+            class="btn"
+            color="primary"
+            (click)="hideCard = !hideCard"
+          >
+            Back
+          </button>
+          <button
+            type="submit"
+            mat-flat-button
+            class="btn"
+            color="primary"
+            [disabled]="signUpForm.invalid"
+          >
+            Submit
+          </button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
