--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -24,6 +24,7 @@
           formControlName="password"
         />
         <button
+        type="button"
           mat-icon-button
           matSuffix
           (click)="hidePassword = !hidePassword"
@@ -48,6 +49,7 @@
           formControlName="confirm"
         />
         <button
+        type="button"
           mat-icon-button
           matSuffix
           (click)="hideConfirm = !hideConfirm"
