--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -12,6 +12,12 @@
       </mat-card-header>
       <mat-card-content>
         <form [formGroup]="signUpForm" fxLayout="column">
+          <mat-error
+          class="backend-error"
+          fxFlexAlign="center"
+          *ngIf="backendError"
+          >{{ backendError}}</mat-error
+        >
           <mat-form-field appearance="fill">
             <mat-label>FirstName</mat-label>
             <input matInput type="text" formControlName="firstName" autofocus />
@@ -53,6 +59,7 @@
             />
 
             <button
+            type="button"
               mat-icon-button
               matSuffix
               (click)="hideConfirm = !hideConfirm"
@@ -69,7 +76,6 @@
           </mat-form-field>
 
           <button
-            [ngClass]="{ 'margin-top': ['password'] }"
             type="button"
             mat-flat-button
             class="btn"
@@ -96,6 +102,12 @@
           (ngSubmit)="onSubmit()"
           fxLayout="column"
         >
+        <mat-error
+          class="backend-error"
+          fxFlexAlign="center"
+          *ngIf="backendError"
+          >{{ backendError}}</mat-error>
+
           <mat-form-field appearance="fill">
             <mat-label>Live In</mat-label>
             <input
@@ -161,7 +173,6 @@
           <mat-form-field appearance="fill">
             <mat-label>Genre</mat-label>
             <mat-select matNativeControl formControlName="genre">
-              <mat-option value=" ">-</mat-option>
               <mat-option value="1">Male</mat-option>
               <mat-option value="2">Female</mat-option>
             </mat-select>
@@ -179,6 +190,7 @@
             </mat-select>
           </mat-form-field>
           <button
+          type="button"
             mat-flat-button
             class="btn"
             color="primary"
