--- a/src/app/user/signup/signup.component.scss
+++ b/src/app/user/signup/signup.component.scss
@@ -53,6 +53,9 @@ button:last-of-type {
   margin-bottom: 0;
 }
 
-.margin-top {
-  margin-top: 2.2rem;
-}
+mat-form-field{
+    +button {
+      margin-top: 2.2rem;
+    }
+  }
+
