use store feature

--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -16,8 +16,8 @@
       >
         <mat-error
           class="backend-error"
-          *ngIf="errorMessage$ | async as errorMessage"
-          >{{ errorMessage }}</mat-error
+          *ngIf="backendError$ | async as error"
+          >{{ error }}</mat-error
         >
         <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
