--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -10,11 +10,11 @@
       [formGroup]="resetPasswordForm"
       (ngSubmit)="onSubmit()"
     >
-      <div *ngIf="backendErrors$ |async as errors" class="error-container">
-        <mat-error class="backend-error" *ngFor="let error of errors">{{
-          error
-        }}</mat-error>
-      </div>
+      <mat-error
+        class="backend-error"
+        *ngIf="backendErrors$ | async as error"
+        >{{ error }}</mat-error
+      >
 
       <mat-form-field appearance="fill">
         <mat-label>New Password</mat-label>
@@ -24,7 +24,7 @@
           formControlName="password"
         />
         <button
-        type="button"
+          type="button"
           mat-icon-button
           matSuffix
           (click)="hidePassword = !hidePassword"
@@ -41,6 +41,8 @@
         }}</mat-error>
       </mat-form-field>
 
+      <span *ngIf="validationErrors['password']" fxFlex="2em"></span>
+
       <mat-form-field appearance="fill">
         <mat-label>Confirm Password</mat-label>
         <input
@@ -49,7 +51,7 @@
           formControlName="confirm"
         />
         <button
-        type="button"
+          type="button"
           mat-icon-button
           matSuffix
           (click)="hideConfirm = !hideConfirm"
