--- a/src/app/user/forgot-password/forgot-password.component.html
+++ b/src/app/user/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
-<div class="container" fxLayout="column" fxLayoutAlign="start stretch">
+<div class="container" fxLayout="column" xLayoutAlign="stretch center">
   <span fxFlex="8rem"></span>
 
-  <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
+  <mat-card  class="mat-elevation-z10" fxFlexAlign="center">
     <mat-card-header>
       <mat-card-title>Forgot Password</mat-card-title>
       <mat-card-subtitle>
