--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="container" fxLayout="column" fxLayoutAlign="start stretch">
+<div class="container" fxLayout="column" fxLayoutAlign="stretch center" >
   <span fxFlex="8rem"></span>
 
-  <mat-card [ngClass.gt-xs]="['card']" class="mat-elevation-z10">
+  <mat-card  class=" mat-elevation-z10" fxFlexAlign="center">
     <mat-card-header fxLayout="column" fxLayoutAlign="start center">
       <mat-card-title>Sign In</mat-card-title>
     </mat-card-header>
