--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -1,11 +1,10 @@
-<div class="container" fxLayout="column" fxLayoutAlign="start stretch">
+<div class="container" fxLayout="column" fxLayoutAlign="stretch center">
   <span fxFlex="8rem"></span>
 
-  <div [ngClass]="{ 'first-card_show': hideCard }">
     <mat-card
-      ngClass.gt-xs="card"
       class="mat-elevation-z10"
       fxFlexAlign="center"
+      [ngClass]="{ 'first-card_show': hideCard }"
     >
       <mat-card-header fxLayout="column" fxLayoutAlign="start center">
         <mat-card-title>Sign Up</mat-card-title>
@@ -87,14 +86,12 @@
         </form>
       </mat-card-content>
     </mat-card>
-  </div>
 
-  <div [ngClass]="{ 'second-card_show': !hideCard }">
+
     <mat-card
-      ngClass.gt-xs="card"
-      class="mat-elevation-z10 second-card_hide"
+      class="mat-elevation-z10 "
       fxFlexAlign="center"
-      [ngClass]="{ 'second-card_hide': hideCard }"
+      [ngClass]="{ 'second-card_show': !hideCard }"
     >
       <mat-card-content>
         <form
@@ -172,7 +169,7 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Genre</mat-label>
-            <mat-select matNativeControl formControlName="genre">
+            <mat-select  matNativeControl formControlName="genre">
               <mat-option value="1">Male</mat-option>
               <mat-option value="2">Female</mat-option>
             </mat-select>
@@ -183,7 +180,7 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Join As</mat-label>
-            <mat-select matNativeControl formControlName="roles">
+            <mat-select value=" " matNativeControl formControlName="roles">
               <mat-option value=" ">User</mat-option>
               <mat-option value="producer">Artist</mat-option>
               <mat-option value="organization">Organization</mat-option>
@@ -210,5 +207,4 @@
         </form>
       </mat-card-content>
     </mat-card>
-  </div>
 </div>
