--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,8 +1,8 @@
 .app-header {
   width: 100%;
-  height: 65px;
+  height: 20px;
   padding-block-end: 4rem;
-  padding-block-start: 3rem;
+  padding-block-start: 2.5rem;
   padding-inline: 2rem;
   min-width: 280px;
 
@@ -24,26 +24,24 @@
 
 .search-wrapper,
 .search-wrapper-xs {
-  background-color: #ffffff;
-  width: 100%;
-  max-width: 450px;
+  width: inherit;
+  max-width: inherit;
   height: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   font-size: 18px;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  position: relative;
-  left: 44px;
-  box-shadow: 0px 2px 8px -1px rgba(0, 0, 0, 0.3);
-
-
-  form:last-child {
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  // position: relative;
+  // left: 37px;
+  padding: 1.5rem;
+  form:last-child
+{
     width: inherit;
     height: inherit;
   }
@@ -93,29 +91,39 @@
   }
 }
 
+.search-result{
+ position: absolute;
+ top: 4.5rem;
+}
 
 button {
   appearance: none;
   background-color: transparent;
   border: none;
+  text-align: center;
 }
 
 
-button:last-child {
-  margin-right: 1em;
-}
+// button:last-child {
+//   margin-right: 1em;
+// }
 
 
 
 .btn {
-  font-size: 16px;
+  // font-size: 16px;
   font-weight: 700;
   margin-inline: .2em;
+
+}
+
+.search-btn{
+  appearance: none;
 }
 
 
-.profile {
 
+.profile {
   font-size: large;
   box-shadow: 0px 2px 8px -1px rgba(0, 0, 0, 0.2);
 
@@ -145,6 +153,7 @@ button:last-child {
 
   position: relative;
   top: 0;
+
 }
 
 .app-header {
